# siberian-test

./: .gitignore  pyproject.toml
app/: main.py
app/api/: endpoints.py  serializers.py
app/conf/: settings.py
app/crud/: invoices.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  invoices.py
app/schemas/: invoices.py
