[tool.poetry]
name = "syberian-test"
version = "0.1.0"
description = ""
authors = ["sdars94 <sticheeg@yandex.ru>"]
readme = "README.md"
packages = [{include = "syberian_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
